--- a/www/src/index.html
+++ b/www/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Hello wasm-pack!</title>
+    <script src="index.js"></script>
   </head>
   <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="index.js"></script>
+    <canvas id="chart1" width="200" height="100" style="border: solid;"></canvas>
+    <canvas id="chart2" width="200" height="100" style="border: solid;"></canvas>
   </body>
 </html>
