--- a/www/src/index.html
+++ b/www/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
-    <script src="index.js"></script>
-  </head>
-  <body>
-    <canvas id="chart1" width="200" height="100" style="border: solid;"></canvas>
-    <canvas id="chart2" width="200" height="100" style="border: solid;"></canvas>
-  </body>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<script type="text/javascript" src="main.js"></script>
+</head>
+<body>
+    <canvas id="mainCanvas" width="100" height="100" style="margin-top: 100px; margin-left: 100px;border: solid;"></canvas>
+</body>
 </html>
