--- a/www/src/index.html
+++ b/www/src/index.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <canvas id="mainCanvas" width="100" height="100" style="margin-top: 100px; margin-left: 100px;border: solid;"></canvas>
+    <canvas id="mainCanvas" width="100px" height="100px" style="margin-top: 100px; margin-left: 100px;border: solid;"></canvas>
+    <p id="guessResultField" style="margin-top: 30px; margin-left: 100px;"></p>
 </body>
 </html>
